--- a/templates/app/header.html
+++ b/templates/app/header.html
@@ -19,7 +19,7 @@
    
     <link rel="stylesheet" href="{% static 'css/signstyle.css' %}"> <!-- Gem style -->
     <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
-    <title>McGill C2C | HOME</title>
+    <title>JaneMarket | HOME</title>
 
     {% block head%}
     {% endblock head%}
@@ -49,7 +49,7 @@
             </div>
             <!-- Logo -->
             <div class="logo">
-                <a href="{% url 'index'%}"><img src="{% static 'img/bg-img/logo.png' %}" alt=""></a>
+                <a href="{% url 'index'%}"><img src="{% static 'img/bg-img/jj.jpg' %}" alt=""></a>
             </div>
             <div> 
                 <h3>Welcome: {{username}}</h3>
